<?xml version="1.0"?>
<package format="3">
  <name>mower_bringup</name>
  <version>0.1.0</version>
  <description>RTK Mower launch files</description>
  <maintainer email="louis@todo.com">Louis</maintainer>
  <license>MIT</license>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>ublox_gps</exec_depend>
  <exec_depend>bno085</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
